--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.4.1",
     "@types/jquery": "^3.5.29",
     "astro": "^4.2.4",
+    "cookies-js": "^1.2.3",
     "typescript": "^5.3.3"
   }
 }
